--- a/FakeNewz/src/app/fact-checking-panel/fact-checking-panel.component.scss
+++ b/FakeNewz/src/app/fact-checking-panel/fact-checking-panel.component.scss
@@ -1,6 +1,6 @@
 #factPanel {
-    width: 22vw;
-    text-align: center;
-    height: 100vh;
-    padding-right: 2vw;
+  width: 22vw;
+  text-align: center;
+  height: 100vh;
+  margin-left: 3%;
 }
